[gd_scene load_steps=23 format=3 uid="uid://cnnrse3vsfn5c"]

[ext_resource type="Script" path="res://Code/Misc/cannon_ball.gd" id="1_ittpv"]
[ext_resource type="Texture2D" uid="uid://djsdd8u3dmudv" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f0.png" id="1_kqlok"]
[ext_resource type="Texture2D" uid="uid://creh8qmmf6yn8" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f1.png" id="2_rsfbt"]
[ext_resource type="Texture2D" uid="uid://baeh6hjylsbom" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f2.png" id="3_jqfpk"]
[ext_resource type="Texture2D" uid="uid://c4tyh83n1k7py" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f3.png" id="4_uk4q7"]
[ext_resource type="Texture2D" uid="uid://ju2xlqm7txfg" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f4.png" id="5_p1lj4"]
[ext_resource type="Texture2D" uid="uid://bfu6v88occbd2" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f5.png" id="6_ohxfx"]
[ext_resource type="Texture2D" uid="uid://1vm8uodufp52" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f6.png" id="7_xxcqg"]
[ext_resource type="Texture2D" uid="uid://b685kyyhcxkij" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f7.png" id="8_5tjme"]
[ext_resource type="Texture2D" uid="uid://bffuhw6imhkac" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f8.png" id="9_8ux4l"]
[ext_resource type="AudioStream" uid="uid://cnmbr5npk04cf" path="res://Assets/Sound/NPC/cannonshot1.wav" id="11_47vi2"]
[ext_resource type="Texture2D" uid="uid://b4ejd1nymsmm3" path="res://Assets/Sprites/Misc/cannon/explosion-1-f/explosion-f9.png" id="11_t32im"]
[ext_resource type="AudioStream" uid="uid://dm37s0itc058d" path="res://Assets/Sound/NPC/cannonshot2.wav" id="12_pfdj7"]
[ext_resource type="AudioStream" uid="uid://25jm416k7b7u" path="res://Assets/Sound/Player/gun_sound.mp3" id="13_v64h8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_op6s2"]
radius = 84.3801

[sub_resource type="CircleShape2D" id="CircleShape2D_uk04p"]
radius = 254.126

[sub_resource type="Animation" id="Animation_evxuq"]
resource_name = "Explosion"
length = 9.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(3.5, 3.5)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"explosion", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"explode"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Shot:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Explosion:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ev4h1"]
_data = {
"Explosion": SubResource("Animation_evxuq")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_fssiq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_kqlok")
}, {
"duration": 1.0,
"texture": ExtResource("2_rsfbt")
}, {
"duration": 1.0,
"texture": ExtResource("3_jqfpk")
}, {
"duration": 1.0,
"texture": ExtResource("4_uk4q7")
}, {
"duration": 1.0,
"texture": ExtResource("5_p1lj4")
}, {
"duration": 1.0,
"texture": ExtResource("6_ohxfx")
}, {
"duration": 1.0,
"texture": ExtResource("7_xxcqg")
}, {
"duration": 1.0,
"texture": ExtResource("8_5tjme")
}, {
"duration": 1.0,
"texture": ExtResource("9_8ux4l")
}, {
"duration": 1.0,
"texture": ExtResource("11_t32im")
}],
"loop": false,
"name": &"explosion",
"speed": 30.0
}]

[sub_resource type="Curve" id="Curve_wohsc"]
max_value = 200.0
_data = [Vector2(0, 100), 0.0, 0.0, 0, 0, Vector2(1, 100), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_bsjxe"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f2017"]
streams_count = 2
random_pitch = 1.4
random_volume_offset_db = 6.98
stream_0/stream = ExtResource("11_47vi2")
stream_0/weight = 1.0
stream_1/stream = ExtResource("12_pfdj7")
stream_1/weight = 1.0

[node name="CannonBall" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 7
script = ExtResource("1_ittpv")

[node name="CannonShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_op6s2")

[node name="ShakeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShakeArea"]
shape = SubResource("CircleShape2D_uk04p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ev4h1")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_fssiq")
animation = &"explosion"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
preprocess = 24.24
emission_shape = 1
emission_sphere_radius = 95.38
gravity = Vector2(0, 0)
radial_accel_min = 2.0
radial_accel_max = 8.0
radial_accel_curve = SubResource("Curve_wohsc")
scale_amount_min = 0.0
scale_amount_max = 3.0
color = Color(1, 0.509804, 0.454902, 1)
color_ramp = SubResource("Gradient_bsjxe")

[node name="Shot" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-2084.5, 0)
stream = SubResource("AudioStreamRandomizer_f2017")

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_v64h8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="ShakeArea" to="." method="_on_shake_area_body_entered"]
[connection signal="body_exited" from="ShakeArea" to="." method="_on_shake_area_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
